# tap-suite

./: README.md  generating_problems_demo.ipynb  pyproject.toml  readme_demo.ipynb  requirements.txt  running_suite_demo.ipynb
create_clothoids/clothoids/: asymmetric_clothoid_spline.py  asymmetric_clothoid_spline_functions.py  clothoids.py  multiple_sequential_asymmetric_clothoid_spline.py
tap/: __init__.py  angle_manipulation.py  jmetalpy_problem.py  problem.py  pymoo_problem.py  solution.py  suite.py
tap/create_clothoids/: LICENSE  README.md  setup.py
tap/problems/: 15-areas_hor=1_ver=1.json  15-areas_hor=1_ver=2.json  15-areas_hor=2_ver=1.json  15-areas_hor=2_ver=2.json  15-areas_hor=3_ver=1.json  15-areas_hor=3_ver=2.json  15-areas_hor=4_ver=1.json  15-areas_hor=4_ver=2.json  15-areas_hor=5_ver=1.json  15-areas_hor=5_ver=2.json  left-right_hard=0_hor=1_ver=1_soft=1.json  left-right_hard=1_hor=1_ver=1_soft=1.json  left-right_hard=2_hor=0_ver=1_soft=1.json  left-right_hard=2_hor=1_ver=1_soft=0.json  left-right_hard=2_hor=1_ver=1_soft=1.json  left-right_hard=2_hor=1_ver=1_soft=2.json  left-right_hard=2_hor=1_ver=2_soft=1.json  left-right_hard=2_hor=2_ver=1_soft=1.json  left-right_hard=3_hor=1_ver=1_soft=1.json  left-right_hard=4_hor=1_ver=1_soft=1.json  loop_hor=4_ver=1.json  loop_hor=4_ver=2.json  loop_hor=5_ver=1.json  loop_hor=5_ver=2.json  loop_hor=6_ver=1.json  loop_hor=6_ver=2.json  lr-ud_hor=2_ver=2.json  lr-ud_hor=2_ver=3.json  lr-ud_hor=3_ver=2.json  lr-ud_hor=3_ver=3.json  lr-ud_hor=4_ver=2.json  lr-ud_hor=4_ver=3.json  lr-ud_hor=5_ver=2.json  (+17 more)
(+5 files in other folders)
